--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "next": "15.4.1",
     "qrcode.react": "^4.2.0",
     "react": "19.1.0",
